tools/flowc/tests/errors/error7.flow
import string;

// Test on detection of struct re-declaration 

Struct1 : (a : int, b : int);
Struct1 : (x : int);

// Re-defintion from the global namespace

Some : (s : string);
